# vaxport

./: .gitignore  CLAUDE.md  Makefile  README.md  clean_for_distribution.sh  myappdb_full.dump  pyproject.toml  requirements.txt  vaxport.spec
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
Vaxport-GUI/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
Vaxport-GUI/src/: App.css  App.tsx  index.css
Vaxport-GUI/src-tauri/: Cargo.toml  potency_stats.py  pstats.py  tauri.conf.json
Vaxport-GUI/src-tauri/src/: lib.rs
docs/: ARCHITECTURE_PLAN.md  PACKAGING.md  TROUBLESHOOTING.md  demo-questions.md  vaxport Agent 运行时层改进参考.md  vaxport_test_report_2026-06-01.md
scripts/: auto_scorer.py  build-sidecar.sh  generate_baseline_report.py  generate_comparison_report.py  generate_flu_vaccine_data.py  generate_pedv_data.py  generate_quality_supplement.py  generate_vaccine_data.py  install_pg_stats_ext.sql  skill_baseline_test.py  test_framework.py  test_runner.py  vaxport-tui.sh
src/vaxport/: __init__.py  agent.py  alerts.py  anomaly.py  api_server.py  charts.py  cli.py  compliance.py  concurrent_executor.py  config.py  context.py  db.py  deep_research.py  documents.py  image_analysis.py  memory.py  monitoring.py  orchestrator.py  prediction.py  regulations.py  reports.py  schema_catalog.py  semantic_memory.py  session.py  signal_detection.py  skill_engine.py  skill_validator.py  skills.py  statistics.py  tools.py  tui_launcher.py  ui.py  web_search.py
tests/: test_deep_research.py  test_guardrails_section.py  test_semantic_memory.py
(+57 files in other folders)
